# myagents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: loop.py  runner.py
agent/subagents/: registry.py
agent/tools/: __init__.py  dispatch.py
agent_hemo/: agent_loop.py  main.py  settings.py
agent_hemo/api/: alerts_pipeline.py  auth.py  schemas.py  tool_helpers.py
agent_hemo/core/: llm_client.py
agent_hemo/mcp_server/: __init__.py  __main__.py  server.py
agent_hemo/memory/: __init__.py  memory_store.py
agent_hemo/static/: chat.html
agent_hemo/tools/: __init__.py  blood_report_tool.py  dispatch_subagent_tool.py  plan_tool.py  rag_tool.py  read_memory_tool.py  write_file_tool.py
agent_hemo/utils/: chunk_utils.py  sandbox.py  skill_loader.py
agent_hemo/workflows/: __init__.py
build-agent-example/code/: step01_single_call.py  step02_loop_no_memory.py  step03_history.py  step04_system_prompt.py  step05_tool_use.py  step06_skills.py  step08_subagent.py  (+1 more)
data/: daily_collection_2025-06-18.csv  daily_collection_2026-06-18.csv  sample.pptx
knowledge/: 单采血浆站技术操作规程(2022 年版).md  血液行业规范和标准解读-20200227.md
myagents/: .dockerignore  .env.example  .gitignore  README.md  __init__.py  agent_loop.py  agent_runner.py  config.py  main.py  requirements.txt
ppt/: 第三期:记忆系统.html  第四期:任务规划与分发子代理实现.html
reports/: 2025-06-18-daily.md
scripts/: convert_to_md.py  plasma_stats.py
templates/: USER.md
tests/: test_api.py  test_check_plasma_expiry.py  test_parallel_tools.py  test_plan_tool.py  test_sandbox.py
(+83 files in other folders)
