[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hemo"
version = "0.1.0"
description = "Agent-Hemo（血智）— 面向血站场景的自研 Agent 框架"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.97.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "markitdown[pptx,pdf]>=0.1.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
    "mcp[cli]>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
     # 新增：JWT 鉴权 + 限流
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
]

[project.scripts]
agent-hemo = "agent_hemo.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_hemo*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
